<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg"
    tools:context=".Param_7">
    <Button
        android:id="@+id/buttpar7_1"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:text="@string/par7_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPar7" />

    <Button
        android:id="@+id/buttpar7_2"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par7_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar7_1" />

    <Button
        android:id="@+id/buttpar7_3"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par7_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar7_2" />

    <Button
        android:id="@+id/buttpar7_4"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par7_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar7_3" />

    <Button
        android:id="@+id/buttpar7_5"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par7_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar7_4" />

    <Button
        android:id="@+id/buttpar7_6"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par7_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar7_5" />

    <Button
        android:id="@+id/buttpar7_7"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par7_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar7_6" />

    <Button
        android:id="@+id/buttpar7_8"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par7_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar7_7" />

    <TextView
        android:id="@+id/TextPar7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/par7"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
