<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg"
    tools:context=".Param_4">

    <Button
        android:id="@+id/buttpar4_1"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:text="@string/par4_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPar4" />

    <Button
        android:id="@+id/buttpar4_2"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par4_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar4_1" />

    <Button
        android:id="@+id/buttpar4_3"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par4_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar4_2" />

    <Button
        android:id="@+id/buttpar4_4"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par4_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar4_3" />

    <Button
        android:id="@+id/buttpar4_5"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par4_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar4_4" />

    <Button
        android:id="@+id/buttpar4_6"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par4_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar4_5" />

    <Button
        android:id="@+id/buttpar4_7"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par4_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar4_6" />

    <Button
        android:id="@+id/buttpar4_8"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par4_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar4_7" />

    <Button
        android:id="@+id/buttpar4_9"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par4_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar4_8" />

    <Button
        android:id="@+id/buttpar4_10"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par4_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar4_9" />

    <Button
        android:id="@+id/buttpar4_11"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par4_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar4_10" />

    <TextView
        android:id="@+id/TextPar4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Рельеф"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

  </android.support.constraint.ConstraintLayout>
