<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg"
    tools:context=".Param_3">

    <Button
        android:id="@+id/buttpar3_1"
        android:layout_width="296dp"
        android:layout_height="65dp"
        android:layout_marginBottom="60dp"
        android:text="@string/par3_1"
        app:layout_constraintBottom_toTopOf="@+id/buttpar3_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttpar3_2"
        android:layout_width="296dp"
        android:layout_height="65dp"
        android:layout_marginBottom="60dp"
        android:text="@string/par3_2"
        app:layout_constraintBottom_toTopOf="@+id/buttpar3_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttpar3_3"
        android:layout_width="296dp"
        android:layout_height="65dp"
        android:layout_marginBottom="60dp"
        android:text="@string/par3_3"
        app:layout_constraintBottom_toTopOf="@+id/buttpar3_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttpar3_4"
        android:layout_width="296dp"
        android:layout_height="65dp"
        android:layout_marginBottom="52dp"
        android:text="@string/par3_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttpar3_4"
            android:layout_width="296dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/par3_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttpar3_3" />

        <Button
            android:id="@+id/buttpar3_5"
            android:layout_width="296dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/par3_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttpar3_4" />

        <Button
            android:id="@+id/buttpar3_6"
            android:layout_width="296dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/par3_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttpar3_5" />

        <Button
            android:id="@+id/buttpar3_7"
            android:layout_width="296dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/par3_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttpar3_6" />

        <Button
            android:id="@+id/buttpar3_8"
            android:layout_width="296dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/par3_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttpar3_7" />

        <Button
            android:id="@+id/buttpar3_9"
            android:layout_width="296dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/par3_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttpar3_8" />

        <Button
            android:id="@+id/buttpar3_10"
            android:layout_width="296dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/par3_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttpar3_9" />

    <TextView
        android:id="@+id/TextPar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/par3"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttpar3_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />
</android.support.constraint.ConstraintLayout>
