<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg"
    tools:context=".Param_8">

    <Button
        android:id="@+id/buttpar8_1"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:text="@string/par8_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPar8" />

    <Button
        android:id="@+id/buttpar8_2"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par8_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar8_1" />

    <Button
        android:id="@+id/buttpar8_3"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par8_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar8_2" />

    <Button
        android:id="@+id/buttpar8_4"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/par8_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttpar8_3" />

    <TextView
        android:id="@+id/TextPar8"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/par8"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
